noinst_HEADERS = \
	vector_relational.hpp \
	gtx/rotate_normalized_axis.hpp \
	gtx/number_precision.inl \
	gtx/matrix_operation.hpp \
	gtx/gradient_paint.inl \
	gtx/simd_quat.hpp \
	gtx/optimum_pow.inl \
	gtx/matrix_major_storage.inl \
	gtx/normalize_dot.hpp \
	gtx/matrix_transform_2d.hpp \
	gtx/type_trait.inl \
	gtx/scalar_relational.inl \
	gtx/rotate_vector.hpp \
	gtx/vector_query.hpp \
	gtx/euler_angles.inl \
	gtx/polar_coordinates.hpp \
	gtx/orthonormalize.hpp \
	gtx/simd_vec4.inl \
	gtx/std_based_type.hpp \
	gtx/compatibility.inl \
	gtx/number_precision.hpp \
	gtx/projection.hpp \
	gtx/log_base.hpp \
	gtx/norm.hpp \
	gtx/mixed_product.inl \
	gtx/vector_angle.inl \
	gtx/fast_exponential.hpp \
	gtx/matrix_decompose.hpp \
	gtx/integer.hpp \
	gtx/float_notmalize.inl \
	gtx/fast_trigonometry.hpp \
	gtx/wrap.hpp \
	gtx/handed_coordinate_space.hpp \
	gtx/matrix_major_storage.hpp \
	gtx/matrix_interpolation.inl \
	gtx/color_space.inl \
	gtx/extended_min_max.hpp \
	gtx/extended_min_max.inl \
	gtx/quaternion.hpp \
	gtx/rotate_normalized_axis.inl \
	gtx/scalar_multiplication.hpp \
	gtx/extend.hpp \
	gtx/normalize_dot.inl \
	gtx/transform2.hpp \
	gtx/compatibility.hpp \
	gtx/quaternion.inl \
	gtx/simd_vec4.hpp \
	gtx/color_space.hpp \
	gtx/transform.inl \
	gtx/vector_query.inl \
	gtx/closest_point.inl \
	gtx/string_cast.hpp \
	gtx/simd_mat4.inl \
	gtx/raw_data.hpp \
	gtx/intersect.inl \
	gtx/intersect.hpp \
	gtx/extend.inl \
	gtx/handed_coordinate_space.inl \
	gtx/matrix_transform_2d.inl \
	gtx/string_cast.inl \
	gtx/vector_angle.hpp \
	gtx/hash.inl \
	gtx/hash.hpp \
	gtx/simd_mat4.hpp \
	gtx/optimum_pow.hpp \
	gtx/associated_min_max.inl \
	gtx/perpendicular.inl \
	gtx/orthonormalize.inl \
	gtx/component_wise.hpp \
	gtx/component_wise.inl \
	gtx/log_base.inl \
	gtx/norm.inl \
	gtx/matrix_operation.inl \
	gtx/io.hpp \
	gtx/fast_square_root.hpp \
	gtx/bit.inl \
	gtx/scalar_relational.hpp \
	gtx/transform2.inl \
	gtx/common.inl \
	gtx/projection.inl \
	gtx/raw_data.inl \
	gtx/associated_min_max.hpp \
	gtx/perpendicular.hpp \
	gtx/rotate_vector.inl \
	gtx/integer.inl \
	gtx/color_space_YCoCg.inl \
	gtx/euler_angles.hpp \
	gtx/fast_exponential.inl \
	gtx/mixed_product.hpp \
	gtx/color_space_YCoCg.hpp \
	gtx/std_based_type.inl \
	gtx/normal.inl \
	gtx/dual_quaternion.hpp \
	gtx/spline.inl \
	gtx/bit.hpp \
	gtx/fast_trigonometry.inl \
	gtx/matrix_interpolation.hpp \
	gtx/gradient_paint.hpp \
	gtx/matrix_query.hpp \
	gtx/matrix_decompose.inl \
	gtx/transform.hpp \
	gtx/wrap.inl \
	gtx/matrix_cross_product.inl \
	gtx/type_aligned.inl \
	gtx/io.inl \
	gtx/range.hpp \
	gtx/matrix_query.inl \
	gtx/type_aligned.hpp \
	gtx/fast_square_root.inl \
	gtx/closest_point.hpp \
	gtx/simd_quat.inl \
	gtx/normal.hpp \
	gtx/spline.hpp \
	gtx/common.hpp \
	gtx/dual_quaternion.inl \
	gtx/polar_coordinates.inl \
	gtx/matrix_cross_product.hpp \
	gtx/type_trait.hpp \
	mat4x4.hpp \
	simd/exponential.h \
	simd/integer.h \
	simd/platform.h \
	simd/packing.h \
	simd/trigonometric.h \
	simd/common.h \
	simd/vector_relational.h \
	simd/matrix.h \
	simd/geometric.h \
	fwd.hpp \
	vec2.hpp \
	mat2x4.hpp \
	vec4.hpp \
	trigonometric.hpp \
	integer.hpp \
	ext.hpp \
	mat4x2.hpp \
	gtc/type_ptr.hpp \
	gtc/bitfield.inl \
	gtc/epsilon.inl \
	gtc/matrix_inverse.hpp \
	gtc/vec1.inl \
	gtc/integer.hpp \
	gtc/reciprocal.inl \
	gtc/matrix_integer.hpp \
	gtc/color_space.inl \
	gtc/quaternion.hpp \
	gtc/bitfield.hpp \
	gtc/epsilon.hpp \
	gtc/quaternion.inl \
	gtc/color_space.hpp \
	gtc/type_precision.hpp \
	gtc/round.hpp \
	gtc/ulp.inl \
	gtc/type_ptr.inl \
	gtc/ulp.hpp \
	gtc/random.inl \
	gtc/matrix_inverse.inl \
	gtc/random.hpp \
	gtc/vec1.hpp \
	gtc/noise.inl \
	gtc/packing.inl \
	gtc/integer.inl \
	gtc/type_precision.inl \
	gtc/matrix_access.inl \
	gtc/reciprocal.hpp \
	gtc/matrix_transform.hpp \
	gtc/constants.inl \
	gtc/matrix_transform.inl \
	gtc/packing.hpp \
	gtc/noise.hpp \
	gtc/constants.hpp \
	gtc/type_aligned.hpp \
	gtc/round.inl \
	gtc/matrix_access.hpp \
	glm.hpp \
	mat3x2.hpp \
	mat3x4.hpp \
	matrix.hpp \
	mat2x3.hpp \
	exponential.hpp \
	mat4x3.hpp \
	mat3x3.hpp \
	geometric.hpp \
	detail/func_vector_relational.hpp \
	detail/type_mat4x3.inl \
	detail/type_gentype.inl \
	detail/type_vec1.inl \
	detail/glm.cpp \
	detail/func_common.inl \
	detail/func_common.hpp \
	detail/type_vec4.hpp \
	detail/type_mat.inl \
	detail/_swizzle_func.hpp \
	detail/func_exponential.hpp \
	detail/type_vec2.hpp \
	detail/type_mat3x4.inl \
	detail/type_mat2x4.hpp \
	detail/type_gentype.hpp \
	detail/setup.hpp \
	detail/func_exponential.inl \
	detail/func_exponential_simd.inl \
	detail/type_vec2.inl \
	detail/type_half.hpp \
	detail/type_vec.inl \
	detail/type_mat3x2.inl \
	detail/_fixes.hpp \
	detail/type_int.hpp \
	detail/func_integer_simd.inl \
	detail/type_mat2x2.hpp \
	detail/_features.hpp \
	detail/type_mat4x2.inl \
	detail/func_matrix_simd.inl \
	detail/type_mat4x2.hpp \
	detail/type_mat2x4.inl \
	detail/type_vec1.hpp \
	detail/func_integer.inl \
	detail/func_matrix.hpp \
	detail/type_mat3x3.inl \
	detail/func_trigonometric.inl \
	detail/func_vector_relational.inl \
	detail/type_vec3.hpp \
	detail/type_mat.hpp \
	detail/func_geometric.inl \
	detail/type_mat3x3.hpp \
	detail/type_mat4x4.inl \
	detail/precision.hpp \
	detail/_swizzle.hpp \
	detail/_noise.hpp \
	detail/type_vec.hpp \
	detail/type_mat3x4.hpp \
	detail/type_half.inl \
	detail/type_mat3x2.hpp \
	detail/func_geometric_simd.inl \
	detail/type_mat2x3.hpp \
	detail/type_float.hpp \
	detail/_vectorize.hpp \
	detail/func_packing_simd.inl \
	detail/func_trigonometric_simd.inl \
	detail/func_trigonometric.hpp \
	detail/type_mat4x4_simd.inl \
	detail/type_mat4x3.hpp \
	detail/func_packing.hpp \
	detail/type_vec4.inl \
	detail/type_mat4x4.hpp \
	detail/type_vec3.inl \
	detail/type_mat2x3.inl \
	detail/func_packing.inl \
	detail/func_common_simd.inl \
	detail/type_mat2x2.inl \
	detail/type_vec4_simd.inl \
	detail/func_matrix.inl \
	detail/func_integer.hpp \
	detail/func_vector_relational_simd.inl \
	detail/func_geometric.hpp \
	vec3.hpp \
	mat2x2.hpp \
	packing.hpp \
	common.hpp

noinst_LTLIBRARIES = libglm.la

libglm_la_SOURCES = detail/glm.cpp

libglm_la_CPPFLAGS = -I..

libglm_la_LDFLAGS =

libglm_la_LIBADD =
