file(GLOB_RECURSE SRC *.c *.h)
add_library(lua ${SRC})
if (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Linux")
	add_definitions("-DLUA_USE_LINUX")
endif()
if (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Windows")
	add_definitions("-DLUA_USE_WINDOWS")
endif()
if (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Darwin")
	add_definitions("-DLUA_USE_MACOSX")
endif()
if (CMAKE_DL_LIBS)
	target_link_libraries(lua ${CMAKE_DL_LIBS})
endif()
target_include_directories(simpleai PUBLIC .)
