noinst_HEADERS = \
	lapi.h \
	lauxlib.h \
	lcode.h \
	lctype.h \
	ldebug.h \
	ldo.h \
	lfunc.h \
	lgc.h \
	llex.h \
	llimits.h \
	lmem.h \
	lobject.h \
	lopcodes.h \
	lparser.h \
	lstate.h \
	lstring.h \
	ltable.h \
	ltm.h \
	luaconf.h \
	lua.h \
	lualib.h \
	lundump.h \
	lvm.h \
	lzio.h

noinst_LTLIBRARIES = \
	liblua.la

liblua_la_SOURCES = \
	lapi.cpp \
	lauxlib.cpp \
	lbaselib.cpp \
	lbitlib.cpp \
	lcode.cpp \
	lcorolib.cpp \
	lctype.cpp \
	ldblib.cpp \
	ldebug.cpp \
	ldo.cpp \
	ldump.cpp \
	lfunc.cpp \
	lgc.cpp \
	linit.cpp \
	liolib.cpp \
	llex.cpp \
	lmathlib.cpp \
	lmem.cpp \
	loadlib.cpp \
	lobject.cpp \
	lopcodes.cpp \
	loslib.cpp \
	lparser.cpp \
	lstate.cpp \
	lstring.cpp \
	lstrlib.cpp \
	ltable.cpp \
	ltablib.cpp \
	ltm.cpp \
	lua.cpp \
	lundump.cpp \
	lvm.cpp \
	lzio.cpp

liblua_la_CFLAGS =

liblua_la_LDFLAGS =

liblua_la_LIBADD =
